# csc_profiling

./: CMakeLists.txt  readme.md
src/: csc_filter_indices.cu  csc_filter_indptr.cu  cuda_utils.cuh  hello_world.cu  register_script.cc
test/: test_filter_indices.py  test_filter_indptr.py  test_hello_world.py  test_script_my_class.py  test_script_my_ops.py
